# paper-wars-server

./: .env  .env.sample  Cargo.toml  README.md
engine/: engine.pl
src/: env.rs  jwt.rs  main.rs
src/filters/: cbor.rs  crypto.rs  mod.rs
src/schema/: context.rs  database.rs  game.rs  localization.rs  mod.rs  universe.rs
src/schema/loader/: account.rs  archetype.rs  archetype_version.rs  contributor.rs  email.rs  emails.rs  entity.rs  login.rs  macros.rs  map.rs  map_version.rs  mod.rs  player.rs  traits.rs  universe.rs  universe_version.rs  universe_version_archetype.rs  universe_version_map.rs
src/schema/mutation/: account.rs  archetype.rs  auth.rs  contributor.rs  email.rs  game.rs  map.rs  mod.rs  universe.rs
src/schema/mutation/helpers/: archetypes.rs  authorization.rs  maps.rs  mod.rs  universe.rs  universes.rs
src/schema/query/: account.rs  archetype.rs  archetype_version.rs  contributor.rs  email.rs  entity.rs  game.rs  map.rs  map_version.rs  mod.rs  operation_result.rs  pagination.rs  player.rs  traits.rs  universe.rs  universe_version.rs
src/schema/subscription/: mod.rs
src/sync/: relay.rs
