[package]
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"
name = "server"
version = "0.1.0"

[dependencies]
shared = { path = "../shared" }
data = { path = "../data" }

anyhow = "1.0"
dotenv = "0.15"
env_logger = "0.7"
juniper = { git = "https://github.com/foxfriends/juniper.git", branch = "master", default-features = false, features = ["chrono", "uuid"] }
juniper_rocket_async = { git = "https://github.com/foxfriends/juniper.git", branch = "master" }
log = "0.4"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "macros"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
