[package]
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"
name = "server"
version = "0.1.0"
default-run = "server"

[lib]
name = "lib"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.12"
bcrypt = "0.8"
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.7"
jsonwebtoken = "7.2"
log = "0.4"
serde_json = "1.0"

[dependencies.data]
path = "../data"

[dependencies.dataloader]
branch = "master"
default-features = false
features = ["sync"]
git = "https://github.com/foxfriends/dataloader-rs"

[dependencies.diesel]
branch = "master"
default-features = false
features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"]
git = "https://github.com/diesel-rs/diesel"

[dependencies.diesel-citext]
git = "https://github.com/foxfriends/diesel-citext"
branch = "master"

[dependencies.juniper]
branch = "master"
default-features = false
features = ["chrono", "uuid"]
git = "https://github.com/graphql-rust/juniper.git"

[dependencies.juniper_rocket_async]
branch = "master"
git = "https://github.com/graphql-rust/juniper.git"

[dependencies.rocket]
branch = "master"
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
default-features = false
features = ["blocking", "macros", "rt-threaded"]
version = "0.2"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8"
